# abclib

./: .gitignore  LICENSE  README.md  pyproject.toml  tree.txt
abclib/: __init__.py  base.py  distance.py  results.py  synthetic_likelihood.py  utils.py
abclib/diagnostics/: __init__.py  ppc.py  sbc.py  str.py
abclib/postprocessing/: __init__.py  regression.py
abclib/samplers/: __init__.py  mcmc.py  rejection.py  smc.py
abclib/statistics/: __init__.py  base.py  handcrafted.py  semiautomatic.py
examples/: config.py  lotka_volterra_model.py  ma2_model.py  ma2_validation.py  model.py  validation.py
examples/lotka_volterra/: model.py  validation.py
examples/ma2/: model.py  validation.py
tests/: conftest.py  test_diagnostics.py  test_mcmc.py  test_regression.py  test_rejection.py  test_smc.py  test_synthetic.py
