[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "abclib"
version = "0.1.0"
description = "A Python library for Approximate Bayesian Computation (ABC) methods."
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]